feat(users): added users page demo

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -5,9 +5,9 @@
 
 .heroBanner {
   padding: 4rem 0;
-  text-align: center;
   position: relative;
   overflow: hidden;
+  height: 20rem;
 }
 
 @media screen and (max-width: 996px) {
@@ -19,5 +19,4 @@
 .buttons {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
