--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,9 @@
   --ifm-color-primary-lightest: #6ba0f9;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  a {
+    text-decoration: none;
+  }
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
