--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -7,18 +7,66 @@
   padding: 3rem 0;
   position: relative;
   overflow: hidden;
-  height: 25rem;
+  height: 30rem;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg) scale(1) translate(0, 0);
+  }
+  25% {
+    transform: rotate(5deg) scale(1.05) translate(5px, 5px);
+  }
+  50% {
+    transform: rotate(0deg) scale(1) translate(0, 0);
+  }
+  75% {
+    transform: rotate(-5deg) scale(1.05) translate(-5px, -5px);
+  }
+}
+
+.astro {
+  width: 300px;
+  height: 300px;
+  animation: spin 4s linear infinite;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
 }
 
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
   }
+  .smallerTitle {
+    font-size: 2.5rem;
+  }
+  .smallerWhenMobile {
+    font-size: 1.2rem;
+  }
+  .astro {
+    width: 200px;
+    height: 200px;
+  }
 }
 
-.buttons {
-  display: flex;
-  align-items: center;
+@media screen and (max-width: 690px) {
+  .astro {
+    display: none;
+  }
+  .smallerTitle {
+    font-size: 2rem;
+  }
+  .smallerWhenMobile {
+    font-size: 1rem;
+  }
 }
 
 @media screen and (max-width: 468px) {
